<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PushWords</string>
    <string name="txt_your_name_display">Your name: %1$s</string>
    <string name="txt_enter_your_name">Enter your name</string>
    <string name="txt_your_name">Your name:</string>
    <string name="txt_save">Save</string>
    <string name="txt_choose_an_option">Choose an option</string>
    <string name="txt_enable_notifications">Enable notifications</string>
    <string name="txt_show_words_and_translations_in_push_notifications">Show words and translations in push notifications</string>
    <string name="txt_select_the_frequency_of_notifications">Select the frequency of notifications</string>
    <string name="txt_select_preferences">Select preferences</string>
    <string name="txt_enable_dark_mode">Enable dark mode</string>
    <string name="txt_enable_offline_mode">Enable offline mode</string>
    <string name="txt_adjust_volume">Adjust volume</string>
    <string name="txt_select_a_language">Select a language</string>
    <string name="txt_choose_lang_for_quiz">Choose language for the quiz</string>
    <string name="txt_english_lang">English</string>
    <string name="txt_russian_lang">Russian</string>
    <string name="txt_random_choose">Choose randomly</string>
    <string name="txt_chb_dont_disturb_21_to_9">Do not send notifications from 21:00 to 09:00</string>
    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="notification_frequencies">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>1 day</item>
    </string-array>
</resources>
