<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:divider="?android:attr/dividerVertical"
        android:showDividers="middle">
        <TextView
            android:id="@+id/tvUserNameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_your_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="16dp" />
        <EditText
            android:id="@+id/edittext_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/txt_enter_your_name" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/saveNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            android:layout_gravity="bottom|start" />

        <!-- Switch -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_enable_notifications"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_show_words_and_translations_in_push_notifications" />


        <!-- Spinner (Notifications) -->
        <TextView
            android:id="@+id/tv_spinner_notifications_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_the_frequency_of_notifications"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spinner_notifications_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/notification_frequencies" />


        <!-- CheckBox -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_preferences"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />
        <CheckBox
            android:id="@+id/checkbox_quiet_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_chb_dont_disturb_21_to_9" />

        <CheckBox
            android:id="@+id/isDarkModeEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_enable_dark_mode" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_adjust_volume"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <SeekBar
            android:id="@+id/seekbar_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_choose_lang_for_quiz"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>
        <!--  RadioGroup with RadioButtons  -->
        <RadioGroup
            android:id="@+id/radio_group_language_for_riddles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio_option_original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_english_lang"/>
            <RadioButton android:id="@+id/radio_option_translation_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_russian_lang"/>
            <RadioButton android:id="@+id/radio_option_random_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:text="@string/txt_random_choose"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
